<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/give_you_glory"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expSetting"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="15sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preRestTime"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/preRestTimeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/selectPreRestTime"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/focusTime"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/focusTimeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/selectFocusTime"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postRestTime"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/postRestTimeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/selectPostRestTime"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trialNumber"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/trialValueSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/selectTrialNumber"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:textStyle="bold" />

</LinearLayout>